# overly-ambitious-isqo

./: .gitignore  .tm_properties  LICENSE  Makefile  Makefile.in  README.md  config.h.in  configure.ac  constraint_violation.cc  hessian_shifter.hh  isqo_functor.cc  iterate.cc  iterate.hh  line_search.cc  linear_model.cc  linear_model.hh  linear_model_reduction.cc  nlp_ampl.hh  nlp_hs014.cc  nlp_hs014.hh  nlp_state.hh  notes  notes.org  solve_subproblem.cc  solve_subproblem.hh  step.cc  step.hh  subproblem.hh  utilities.cc  utilities.hh
debugging_nls/: ampl_bound_reformulation.nl  ampl_hessian.nl  ampl_hessian2.nl  hs014_reform.py
include/: constraint_violation.hh  hessian_shifter.hh  isqo.hh  iterate.hh  linear_model_reduction.hh  matrix.hh  nlp.hh  nlp_ampl.hh  nlp_hs014.hh  penalty_function.hh  solve_subproblem.hh  subproblem.hh  utilities.hh
src/: Makefile  Makefile.am  constraint_violation.cc  constraint_violation.hh  default-doxy  hessian_shifter.cc  hessian_shifter.hh  isqo.hh  isqo_config.cc  isqo_config.hh  isqo_doxygen  isqo_functor.cc  iterate.cc  iterate.hh  line_search.cc  line_search.hh  linear_model.cc  linear_model.hh  linear_model_reduction.cc  linear_model_reduction.hh  matrix.cc  matrix.hh  nlp.cc  nlp.hh  nlp_ampl.cc  nlp_ampl.hh  nlp_hs014.cc  nlp_hs014.hh  nlp_state.hh  penalty_function.cc  penalty_function.hh  residual_function.cc  residual_function.hh  solve_subproblem.cc  solve_subproblem.hh  step.cc  step.hh  subproblem.cc  subproblem.hh  test_ampl_interface.cc  (+9 more)
